--- a/src/app/app.html
+++ b/src/app/app.html
@@ -1,4 +1,4 @@
-<input type="text" placeholder="Введите название" #search />
+<input type="text" placeholder="Введите название игры" #search />
 
 <div class="wrapper">
   @for(item of filteredData; track item.id) {
