--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -18,6 +18,10 @@ input {
     flex-direction: column;
   }
 
+  h3 {
+    color: rgb(155, 155, 147);
+  }
+
   img {
     flex: 1 1 auto;
     border-bottom: 4px solid goldenrod;
