--- a/src/app/app.scss
+++ b/src/app/app.scss
@@ -24,6 +24,6 @@ input {
 
   img {
     flex: 1 1 auto;
-    border-bottom: 4px solid goldenrod;
+    border-bottom: 4px solid greenyellow;
   }
 }
